# agent-runtime

./: Dockerfile.agent-base  Dockerfile.claude  Dockerfile.cloud  Dockerfile.copilot  Dockerfile.go  Dockerfile.opencode  README.md  buildkitd.toml  create-copilot-pod.sh  create-opencode-pod.sh  docker-bake.hcl  docker-compose.yml  test.sh
agent-sandbox/: install-agent-sandbox.sh
agent-sandbox-sdk/: .gitignore  README.md  main.py  pyproject.toml
agent-sandbox-sdk/agent_sandbox_sdk/: cli.py
agent-sandbox-sdk/tests/: conftest.py  connection_test.py  test_main.py
agent-sandbox/sandbox-router/: deploy-kind.sh  sandbox_router.yaml
agent-sandbox/volume-claim-example/: sandbox-claim.yaml  sandbox-template-with-volume.yaml  sdk_example.py
agent-sandbox/volume-claim-example/source/: deploy.sh  template.yaml
k8s/: Dockerfile.kind-gvisor  copilot-pod.tmpl.yaml  kind-config.yaml  opencode-pod.tmpl.yaml
